# ua-parser-lib-builder2

./: .gitmodules  CMakeLists.txt
